--- a/api-reference/endpoint/meta/get_custom_audiences.mdx
+++ b/api-reference/endpoint/meta/get_custom_audiences.mdx
@@ -30,7 +30,7 @@ description: "This endpoint allows you to get custom audiences."
 			Indicates whether the specific operation or API action was successful.
 		</ResponseField>
 
-    	<ResponseField name="customAudiences" type="array" >
+    	<ResponseField name="customAudiences" type="object[]" >
             <Expandable title="Custom Audiences">
                 <ResponseField name="id" type="string" >
                     Unique audience identifier
