--- a/api-reference/endpoint/meta/get_custom_conversions.mdx
+++ b/api-reference/endpoint/meta/get_custom_conversions.mdx
@@ -31,7 +31,7 @@ description: "Get custom conversions for a campaign"
 			Indicates whether the specific operation or API action was successful.
 		</ResponseField>
 
-    	<ResponseField name="customConversions" type="array" >
+    	<ResponseField name="customConversions" type="object[]" >
             <Expandable title="Custom Conversions Object">
                 <ResponseField name="name" type="string" >
                     Custom conversion name
