--- a/api-reference/endpoint/meta/get_leadforms.mdx
+++ b/api-reference/endpoint/meta/get_leadforms.mdx
@@ -25,7 +25,7 @@ description: "This endpoint allows you to get list of all leadforms."
 			Indicates whether the specific operation or API action was successful.
 		</ResponseField>
 
-    	<ResponseField name="leadForms" type="array" >
+    	<ResponseField name="leadForms" type="object[]" >
             <Expandable title="Custom Audiences">
                 <ResponseField name="id" type="string" >
                     Unique lead form identifier
