--- a/api-reference/endpoint/meta/get_page_posts.mdx
+++ b/api-reference/endpoint/meta/get_page_posts.mdx
@@ -36,7 +36,7 @@ description: "This endpoint is used to get page posts from facebook and instagra
                 Indicates whether the specific operation or API action was
                 successful.
             </ResponseField>
-            <ResponseField name="posts" type="array">
+            <ResponseField name="posts" type="object[]">
                 <Expandable title="Posts Array">
                         <ResponseField name="id" type="string">
                             The unique identifier for the post.
@@ -91,7 +91,7 @@ description: "This endpoint is used to get page posts from facebook and instagra
                 Indicates whether the specific operation or API action was
                 successful.
             </ResponseField>
-           <ResponseField name="posts" type="array">
+           <ResponseField name="posts" type="object[]">
                 <Expandable title="Post Object">
                     <ResponseField name="id" type="string">
                     The unique identifier for the Instagram post.
