--- a/api-reference/endpoint/meta/get_pixels_list.mdx
+++ b/api-reference/endpoint/meta/get_pixels_list.mdx
@@ -26,7 +26,7 @@ description: "This endpoint is used to get meta pixels list."
 			successful.
 		</ResponseField>
 
-        <ResponseField name="pixels" type="array">
+        <ResponseField name="pixels" type="object[]">
             <Expandable title="Pixels Array">
                 <Expandable title="Pixel Object">
                     <ResponseField name="id" type="string">
