--- a/api-reference/endpoint/meta/get_video_info.mdx
+++ b/api-reference/endpoint/meta/get_video_info.mdx
@@ -34,7 +34,7 @@ description: "This endpoint is used to get video info like dimensions, thumbnail
 			<Expandable title="Video Object">
 				<ResponseField name="thumbnails" type="object">
 					<Expandable title="Thumbnails Object">
-						<ResponseField name="data" type="array">
+						<ResponseField name="data" type="object[]">
 							<Expandable title="Thumbnail Data Array">
 								<Expandable title="Thumbnail Object">
 									<ResponseField name="id" type="string">
