--- a/api-reference/endpoint/meta/search_targeting_interests.mdx
+++ b/api-reference/endpoint/meta/search_targeting_interests.mdx
@@ -34,7 +34,7 @@ description: "This endpoint allows you to search for advertising target interest
 			Indicates whether the specific operation or API action was successful.
     	</ResponseField>
 
-    	<ResponseField name="interests" type="array">
+    	<ResponseField name="interests" type="object[]">
             <Expandable title="Interest Items">
                 <ResponseField name="id" type="string">
                     Unique interest identifier
