--- a/api-reference/endpoint/meta/search_targeting_locations.mdx
+++ b/api-reference/endpoint/meta/search_targeting_locations.mdx
@@ -28,7 +28,7 @@ description: "This endpoint allows you to search for advertising target Location
 			Indicates whether the specific operation or API action was successful.
 		</ResponseField>
 
-    	<ResponseField name="locations" type="array" >
+    	<ResponseField name="locations" type="object[]" >
       <Expandable title="Location Items">
           <ResponseField name="key" type="string" >
             Unique location identifier
