--- a/api-reference/endpoint/meta/campaign/traffic_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/traffic_standard.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Standard Ad Campaign"
 api: "POST /meta/create_campaign"
-description: "This endpoint is used to create a campaign for traffic standard ads. Traffic ads are designed to drive users to a specific destination like a website, app, or messaging platform."
+description: "This endpoint is used to create a campaign for traffic standard ads. Traffic ads are designed to drive users to a specific destination like a website."
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
@@ -20,7 +20,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 	For Traffic Goal, campaignType is `LINK_CLICKS`
 </ParamField>
 
-<ParamField body="carousel" type="array">
+<ParamField body="carousel" type="object[]">
 	<Expandable title="Carousel Array">
 		<ParamField body="name" type="string" required>
 			Carousel Name
@@ -41,7 +41,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 </ParamField>
 
-<ParamField body="primaryText" type="array">
+<ParamField body="primaryText" type="object[]">
 	<Note>Use this with carousel ads only</Note>
 	<Expandable title="Primary Text Array">
 		<ParamField body="text" type="string" required>
@@ -60,7 +60,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 </ParamField>
 
-<ParamField body="multipleCreatives" type="array">
+<ParamField body="multipleCreatives" type="object[]">
 
     <Expandable title="Multiple Creative Configuration">
     	<ParamField body="url" type="string" required>
