--- a/api-reference/endpoint/meta/campaign_params.mdx
+++ b/api-reference/endpoint/meta/campaign_params.mdx
@@ -90,7 +90,7 @@
 
 </ParamField>
 
-<ParamField body="videos" type="array">
+<ParamField body="videos" type="object[]">
 	<Expandable title="Video Assets Array">
 		<ParamField body="video_id" type="string" required>
 			Facebook video ID
@@ -106,12 +106,12 @@
 
 </ParamField>
 
-<ParamField body="audienceId" type="array">
+<ParamField body="audienceId" type="object[]">
 	Array of audience IDs, you can get the audienceId from list of audiences
 	[here](/api-reference/endpoint/meta/get_custom_audiences)
 </ParamField>
 
-<ParamField body="primaryText" type="array">
+<ParamField body="primaryText" type="object[]">
 	<Expandable title="Primary Text Array">
 		<ParamField body="text" type="string" required>
 			Main ad copy text
@@ -124,7 +124,7 @@
 
 </ParamField>
 
-<ParamField body="images" type="array">
+<ParamField body="images" type="object[]">
 	<Expandable title="Image Assets Array">
 		<ParamField body="url" type="string" required>
 			URL for image asset
@@ -137,7 +137,7 @@
 
 </ParamField>
 
-<ParamField body="headline1" type="array">
+<ParamField body="headline1" type="object[]">
 	<Expandable title="Headline Variations Array">
 		<ParamField body="text" type="string" required>
 			Headline text variation
@@ -154,7 +154,7 @@
 	Gender targeting (1=male, 2=female, etc.)
 </ParamField>
 
-<ParamField body="locations" type="array">
+<ParamField body="locations" type="object[]">
 	<Expandable title="Location Targeting Array">
 		<ParamField body="id" type="string" required>
 			Facebook location ID
@@ -201,7 +201,7 @@
 
 </ParamField>
 
-<ParamField body="interests" type="array">
+<ParamField body="interests" type="object[]">
 	<Expandable title="Location Targeting Array">
 		<ParamField body="id" type="string" required>
 			Interest Id
@@ -215,7 +215,7 @@
 	</Expandable>
 </ParamField>
 
-<ParamField body="narrowInterests" type="array">
+<ParamField body="narrowInterests" type="object[]">
 	<Expandable title="Location Targeting Array">
 		<ParamField body="id" type="string" required>
 			Interest Id
@@ -229,7 +229,7 @@
 	</Expandable>
 </ParamField>
 
-<ParamField body="furtherInterests" type="array">
+<ParamField body="furtherInterests" type="object[]">
 	<Expandable title="Location Targeting Array">
 		<ParamField body="id" type="string" required>
 			Interest Id
@@ -260,7 +260,7 @@
 	Whether to include Instagram placements
 </ParamField>
 
-<ParamField body="messagingApps" type="array">
+<ParamField body="messagingApps" type="string[]">
 	Messaging apps = `MESSENGER`, `INSTAGRAM`, `WHATSAPP`
 </ParamField>
 
@@ -283,7 +283,7 @@
 	Messenger ad placements = `messenger_home`, `story`
 </ParamField>
 
-<ParamField body="carousel" type="array">
+<ParamField body="carousel" type="object[]">
 	<Expandable title="Carousel Array">
 		<ParamField body="name" type="string" required>
 			Carousel Name
@@ -312,7 +312,7 @@
 	Audience IDs to exclude
 </ParamField>
 
-<ParamField body="excludedLocations" type="array">
+<ParamField body="excludedLocations" type="object[]">
 	<Expandable title="Location Targeting Array">
 		<ParamField body="id" type="string" required>
 			Facebook location ID
@@ -359,7 +359,7 @@
 	Greeting Text, required when campaignType is `OUTCOME_ENGAGEMENT`
 </ParamField>
 
-<ParamField body="conversations" type="array">
+<ParamField body="conversations" type="object[]">
 	<Expandable title="Conversations Array">
 		<ParamField body="title" type="string" required>
 			Conversation Title
@@ -396,7 +396,7 @@
 	Product Set ID, required when campaignType is `CATALOG`
 </ParamField>
 
-<ParamField body="multipleCreatives" type="array">
+<ParamField body="multipleCreatives" type="object[]">
 	use with `isDynamicCreative` = `false`, to create multiple standard
 	`non-dynamic` ads in a single AdSe
 
@@ -450,7 +450,7 @@
     		Greeting Text (Required for `OUTCOME_ENGAGEMENT`)
     	</ParamField>
 
-    	<ParamField body="conversations" type="array">
+    	<ParamField body="conversations" type="object[]">
     		<Expandable title="Conversations Array">
     			<ParamField body="title" type="string" required>
     				Conversation Title
