--- a/api-reference/endpoint/meta/create_leadform.mdx
+++ b/api-reference/endpoint/meta/create_leadform.mdx
@@ -13,7 +13,7 @@ description: "This endpoint is used to create a leadform."
 	page](/api-reference/endpoint/auth/get_profile).
 </ParamField>
 
-<ParamField body="leadFormQuestions" type="array" required>
+<ParamField body="leadFormQuestions" type="object[]" required>
 	<Expandable title="Lead Form Questions Array">
 		<ParamField body="type" type="string" required>
 			Type of question `CUSTOM`, `CITY`, `COMPANY_NAME`, `COUNTRY`, `DOB`, `EMAIL`, `GENDER`, `FIRST_NAME`, `FULL_NAME`, `JOB_TITLE`, `LAST_NAME`, `MARITIAL_STATUS`, `WHATSAPP_NUMBER`, `EDUCATION_LEVEL`, `WEBSITE`, `PHONE`, `PHONE_OTP`, `POST_CODE`, `PROVINCE`, `RELATIONSHIP_STATUS`, `STATE`, `STREET_ADDRESS`, `ZIP`, `WORK_EMAIL`, `MILITARY_STATUS`, `WORK_PHONE_NUMBER`, `SLIDER`, `STORE_LOOKUP`, `STORE_LOOKUP_WITH_TYPEAHEAD`, `DATE_TIME`, `ID_CPF`, `ID_AR_DNI`, `ID_CL_RUT`, `ID_CO_CC`, `ID_EC_CI`, `ID_PE_DNI`, `ID_MX_RFC`, `JOIN_CODE`, `USER_PROVIDED_PHONE_NUMBER`, `FACEBOOK_LEAD_ID`, `EMAIL_ALIAS`, `MESSENGER`, `VIN`, `LICENSE_PLATE`
@@ -23,7 +23,7 @@ description: "This endpoint is used to create a leadform."
     		Custom label for CUSTOM type questions
     	</ParamField>
 
-    	<ParamField body="options" type="array">
+    	<ParamField body="options" type="object[]">
     		<Expandable title="Options Array">
     			<ParamField body="value" type="string" required>
     				Display value of the option
