--- a/api-reference/endpoint/meta/get_fb_page_media.mdx
+++ b/api-reference/endpoint/meta/get_fb_page_media.mdx
@@ -38,7 +38,7 @@ description: "This endpoint is used to fetch media assets (both images and video
             <ResponseField name="success" type="boolean" >
     		    Indicates whether the specific operation or API action was successful.
             </ResponseField>
-            <ResponseField name="media" type="array" >
+            <ResponseField name="media" type="object[]" >
                 <Expandable title="Media Items">
                     <ResponseField name="id" type="string" >
                         Unique media identifier
@@ -67,7 +67,7 @@ description: "This endpoint is used to fetch media assets (both images and video
     		    Indicates whether the specific operation or API action was successful.
             </ResponseField>
 
-            <ResponseField name="media" type="array" >
+            <ResponseField name="media" type="object[]" >
             <Expandable title="Media Items">
 
                 <ResponseField name="id" type="string" >
