--- a/snippets/create_campaign_params.mdx
+++ b/snippets/create_campaign_params.mdx
@@ -5,20 +5,12 @@
 	page](/api-reference/endpoint/auth/get_profile).
 </ParamField>
 
-<ParamField body="url" type="string" required>
-	Your website URL
-</ParamField>
-
-<ParamField body="budget" type="number" required>
-	Campaign budget amount.
-</ParamField>
-
 <ParamField body="campaignName" type="string" required>
 	Descriptive name for the campaign
 </ParamField>
 
-<ParamField body="audienceName" type="string" required>
-	Name of the target audience
+<ParamField body="budget" type="number" required>
+	Campaigns daily budget amount.
 </ParamField>
 
 <ParamField body="startDate" type="string">
@@ -29,9 +21,22 @@
 	End Date Format: `YYYY-MM-DD`
 </ParamField>
 
+<ParamField body="url" type="string" required>
+	Destination URL where user will be redirected to after clicking the ad.
+</ParamField>
+
 <ParamField body="specialAdCategories" type="string[]">
 	Special ad categories = `HOUSING`, `FINANCIAL_PRODUCTS_SERVICES`,
 	`EMPLOYMENT`
+	<Note>
+		`HOUSING`: Ads related to property sales, rentals, or home-related
+		services.
+	</Note>
+	<Note>
+		`FINANCIAL_PRODUCTS_SERVICES`: Ads promoting credit cards, loans,
+		insurance, or other financial services.
+	</Note>
+	<Note>`EMPLOYMENT`: Ads offering job opportunities or recruitment-related services.</Note>
 </ParamField>
 
 <ParamField body="specialAdCountries" type="string[]">
