--- a/snippets/create_campaign_targeting.mdx
+++ b/snippets/create_campaign_targeting.mdx
@@ -32,7 +32,7 @@
     	</ParamField>
     	<ParamField body="distance_unit" type="string">
     		<Note>Use Distance Unit when type is `city`</Note>
-    		Distance unit (mile, etc.)
+    		Distance unit (`mile` or `km`)
     	</ParamField>
     	<ParamField body="radius" type="number">
     		<Note>Use Radius when type is `city`</Note>
@@ -60,19 +60,20 @@
 		</ParamField>
 		<ParamField body="distance_unit" type="string">
 			<Note>Use Distance Unit when type is `city`</Note>
-			Distance unit (mile, etc.)
-		</ParamField>
-		<ParamField body="radius" type="number">
-			<Note>Use Radius when type is `city`</Note>
-			Radius value
-		</ParamField>
-		<ParamField body="countryCode" type="string">
-			ISO 3166-1 alpha-2 country codes e.g: `US`,`UK`
-		</ParamField>
-		<ParamField body="countryName" type="string">
-			Country Name
-		</ParamField>
-	</Expandable>
+			Distance unit (`mile` or `km`)
+    	</ParamField>
+    	<ParamField body="radius" type="number">
+    		<Note>Use Radius when type is `city`</Note>
+    		Radius value
+    	</ParamField>
+    	<ParamField body="countryCode" type="string">
+    		ISO 3166-1 alpha-2 country codes e.g: `US`,`UK`
+    	</ParamField>
+    	<ParamField body="countryName" type="string">
+    		Country Name
+    	</ParamField>
+    </Expandable>
+
 </ParamField>
 
 <ParamField body="proximityTargeting" type="object[]">
