Refactor campaign documentation by removing redundant notes and restructuring parameter fields for image/video and carousel ads, enhancing clarity and organization.

--- a/api-reference/endpoint/meta/campaign/traffic_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/traffic_dynamic.mdx
@@ -60,7 +60,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="headline1" type="object[]">
-	<Note>You can include up to 5 headline variations. Each headline can be up to 40 characters long.</Note>
+	<Note>You can include up to 5 headline variations.</Note>
 	<Expandable title="Headline Variations Object">
 		<ParamField body="text" type="string" required>
 			Headline text variation
