--- a/snippets/create_campaign_targeting.mdx
+++ b/snippets/create_campaign_targeting.mdx
@@ -20,7 +20,7 @@
 	</Expandable>
 </ParamField>
 
-<ParamField body="locations" type="object[]">
+<ParamField body="locations" type="object[]" required>
     <Note>If Audience ID is provided, then location targeting is optional</Note>
 	List of areas where you want to show your ads. Get locations data from [here](/api-reference/endpoint/meta/search_targeting_locations)
     <Expandable title="Location Targeting Object">
