Enhance campaign documentation by updating titles to "Non Dynamic Ad" for clarity, adding notes on image/video requirements, and restructuring parameter fields for better organization across multiple endpoints.

--- a/api-reference/endpoint/meta/campaign/traffic_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/traffic_dynamic.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Dynamic Ad Campaign"
+title: "Dynamic Ad"
 api: "POST /meta/create_campaign"
 description: "This endpoint is used to create a campaign for traffic dynamic ads. Traffic ads are designed to drive users to a specific destination like a website."
 ---
