--- a/api-reference/endpoint/meta/create_traffic_campaign.mdx
+++ b/api-reference/endpoint/meta/create_traffic_campaign.mdx
@@ -116,7 +116,7 @@ playground: "none"
 	For Traffic Goal, campaignType is `LINK_CLICKS`
 </ParamField>
 
-### Standard Ads Parameters
+### Non Dynamic Ads Parameters
 
 <ParamField body="carousel" type="object[]">
 	<Expandable title="Carousel Array">
