--- a/api-reference/endpoint/meta/campaign/leads_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/leads_standard.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Standard Ad Campaign"
+title: "Non Dynamic Ad"
 api: "POST /meta/create_campaign"
-description: "This endpoint is used to create a campaign for traffic standard ads. Lead generation ads are ad campaigns designed to collect contact information (like name, email, phone number) directly from users on Meta platforms without needing them to leave the app."
+description: "This endpoint is used to create a campaign for leads non dynamic ads. Lead generation ads are ad campaigns designed to collect contact information (like name, email, phone number) directly from users on Meta platforms without needing them to leave the app."
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
@@ -14,118 +14,136 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 <CampaignTargeting />
 
-### Standard Ads Parameters
+### Non Dynamic Ads Parameters
 
 <ParamField body="campaignType" type="string" required>
 	For Lead Goal, campaignType is `LEAD_GENERATION`
 </ParamField>
 
-<ParamField body="carousel" type="object[]">
-	<Expandable title="Carousel Array">
-		<ParamField body="name" type="string" required>
-			Carousel Name
-		</ParamField>
-		<ParamField body="description" type="string">
-			Carousel Description
-		</ParamField>
-		<ParamField body="picture" type="string">
-			Carousel Picture URL
-		</ParamField>
-		<ParamField body="video_id" type="string">
-			Carousel Video ID
-		</ParamField>
-		<ParamField body="link" type="string">
-			Carousel Link URL
-		</ParamField>
-	</Expandable>
+<Tabs>
+	<Tab title="Image/Video Ads">
+		<ParamField body="isDynamicCreative" type="boolean" required>
+    		Whether it's dynamic creative, useable with images/videos
 
-</ParamField>
+    		<Note>
+    			Use `isDynamicCreative` = `false`, to create multiple standard
+    			`non-dynamic` ads in a single AdSet.
+    		</Note>
 
-<ParamField body="primaryText" type="object[]">
-	<Note>Use this with carousel ads only</Note>
-	<Expandable title="Primary Text Array">
-		<ParamField body="text" type="string" required>
-			Main ad copy text
-		</ParamField>
-	</Expandable>
-</ParamField>
-
-<ParamField body="isDynamicCreative" type="boolean" >
-	Whether it's dynamic creative, useable with images/videos
-
-    <Note>
-    	Use `isDynamicCreative` = `false`, to create multiple standard
-    	`non-dynamic` ads in a single AdSet.
-    </Note>
-
-</ParamField>
-
-<ParamField body="multipleCreatives" type="object[]">
-
-    <Expandable title="Multiple Creative Configuration">
-    	<ParamField body="url" type="string" required>
-    		Destination URL
     	</ParamField>
 
-    	<ParamField body="callToAction" type="string" required>
-    		Supported call to action types are `LEARN_MORE`, `SIGN_UP`, `DOWNLOAD`, `APPLY_NOW`,
-    		`SUBSCRIBE`, `GET_QUOTE`, `BOOK_TRAVEL`
+    	<ParamField body="multipleCreatives" type="object[]">
+
+    		<Expandable title="Multiple Creative Configuration">
+    			<ParamField body="url" type="string" required>
+    				Destination URL
+    			</ParamField>
+
+    			<ParamField body="callToAction" type="string" required>
+    				Supported call to action types are `LEARN_MORE`, `SIGN_UP`, `DOWNLOAD`, `APPLY_NOW`,
+    				`SUBSCRIBE`, `GET_QUOTE`, `BOOK_TRAVEL`
+    			</ParamField>
+
+    			<ParamField body="leadsFormId" type="string" required>
+    				Facebook Lead Form ID, get facebook lead form id from
+    				[here](/api-reference/endpoint/meta/get_leadforms)
+    			</ParamField>
+
+    			<ParamField body="primaryText" type="string" required>
+    				Primary Text
+    			</ParamField>
+
+    			<ParamField body="headline1" type="string">
+    				Headline
+    			</ParamField>
+
+    			<ParamField body="image" type="string">
+    				<Note>
+    					Image URL is required if video is not provided
+    				</Note>
+    				Image URL
+    			</ParamField>
+
+    			<ParamField body="video" type="object">
+    				<Note>
+    					Video ID is required if image is not provided
+    				</Note>
+    				<Expandable title="Video Data">
+    					<ParamField body="video_id" type="string">
+    						Video ID
+    					</ParamField>
+    					<ParamField body="thumbnail_url" type="string">
+    						Thumbnail URL
+    					</ParamField>
+    				</Expandable>
+    			</ParamField>
+
+    			<ParamField body="phoneNumber" type="string">
+    				Phone Number (for Call Ads)
+    			</ParamField>
+
+    			<ParamField
+    				body="greetingText"
+    				type="string"
+    			>
+    				Greeting Text
+    			</ParamField>
+
+    			<ParamField body="conversations" type="object[]">
+    				<Expandable title="Conversations Array">
+    					<ParamField body="title" type="string" required>
+    						Conversation Title
+    					</ParamField>
+    				</Expandable>
+    			</ParamField>
+    		</Expandable>
     	</ParamField>
 
-    	<ParamField body="leads_form_id" type="string" required>
-    		Facebook Lead Form ID
-    	</ParamField>
-
-    	<ParamField body="primaryText" type="string" required>
-    		Primary Text
-    	</ParamField>
-
-    	<ParamField body="headline1" type="string">
-    		Headline
-    	</ParamField>
-
-    	<ParamField body="image" type="string">
-    		Image URL
-    	</ParamField>
-
-    	<ParamField body="video" type="object">
-    		<Expandable title="Video Data">
+    </Tab>
+    <Tab title="Carousel Ads">
+    	<ParamField body="carousel" type="object[]">
+    		<Expandable title="Carousel Array">
+    			<ParamField body="name" type="string" required>
+    				Carousel Name
+    			</ParamField>
+    			<ParamField body="description" type="string">
+    				Carousel Description
+    			</ParamField>
+    			<ParamField body="picture" type="string">
+    				<Note>
+    					Carousel Picture URL is required if video is not provided
+    				</Note>
+    				Carousel Picture URL
+    			</ParamField>
     			<ParamField body="video_id" type="string">
-    				Video ID
+    				<Note>
+    					Carousel Video ID is required if picture is not provided
+    				</Note>
+    				Carousel Video ID
     			</ParamField>
-    			<ParamField body="thumbnail_url" type="string">
-    				Thumbnail URL
+    			<ParamField body="link" type="string">
+    				Carousel Link URL
+    			</ParamField>
+    		</Expandable>
+
+    	</ParamField>
+
+    	<ParamField body="primaryText" type="object[]">
+    		<Expandable title="Primary Text Array">
+    			<ParamField body="text" type="string" required>
+    				Main ad copy text
     			</ParamField>
     		</Expandable>
     	</ParamField>
 
-    	<ParamField body="phoneNumber" type="string">
-    		Phone Number (for Call Ads)
+    	<ParamField body="leadsFormId" type="string">
+    		Facebook Lead Form ID, get facebook lead form id from
+    		[here](/api-reference/endpoint/meta/get_leadforms)
     	</ParamField>
 
-    	<ParamField
-    		body="greetingText"
-    		type="string"
-    	>
-    		Greeting Text
-    	</ParamField>
+    </Tab>
 
-    	<ParamField body="conversations" type="object[]">
-    		<Expandable title="Conversations Array">
-    			<ParamField body="title" type="string" required>
-    				Conversation Title
-    			</ParamField>
-    		</Expandable>
-    	</ParamField>
-
-    </Expandable>
-
-</ParamField>
-
-<ParamField body="leads_form_id" type="string">
-	<Note>Use this with carousel ads only</Note>
-	Facebook Lead Form ID
-</ParamField>
+</Tabs>
 
 <ParamField body="callToAction" type="string">
 	<Note>Use this with carousel ads only</Note>
