--- a/api-reference/endpoint/meta/campaign/phone_call.mdx
+++ b/api-reference/endpoint/meta/campaign/phone_call.mdx
@@ -21,6 +21,9 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="images" type="object[]">
+	<Note>
+		You can add up to 10 total images and videos in one dynamic ad, atlease 1 image is required if video is not provided
+	</Note>
 	<Expandable title="Image Assets Array">
 		<ParamField body="url" type="string" required>
 			URL for image asset
@@ -30,6 +33,9 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="videos" type="object[]">
+	<Note>
+		You can add up to 10 total images and videos in one dynamic ad, atlease 1 image is required if video is not provided
+	</Note>
 	<Expandable title="Video Assets Array">
 		<ParamField body="video_id" type="string" required>
 			Facebook video ID, get facebook video id from [here](/api-reference/endpoint/meta/get_ad_account_media)
@@ -63,6 +69,9 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="primaryText" type="object[]">
+	<Note>
+		You can add up to 5 primary text variations, atleast 1 primary text is required
+	</Note>
 	<Expandable title="Primary Text Array">
 		<ParamField body="text" type="string" required>
 			Main ad copy text
@@ -72,6 +81,9 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="headline1" type="object[]">
+	<Note>
+		You can include up to 5 headline variations.
+	</Note>
 	<Expandable title="Headline Variations Array">
 		<ParamField body="text" type="string" required>
 			Headline text variation
