--- a/api-reference/endpoint/meta/campaign/sales_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/sales_standard.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Standard Ad Campaign"
+title: "Non Dynamic Ad"
 api: "POST /meta/create_campaign"
-description: "This endpoint is used to create a campaign for sales standard ads. Sales ads are designed to drive purchases or conversions, showing your ads to people most likely to buy your product or service."
+description: "This endpoint is used to create a campaign for sales non dynamic ads. Sales ads are designed to drive purchases or conversions, showing your ads to people most likely to buy your product or service."
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
@@ -14,111 +14,137 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 <CampaignTargeting />
 
-### Standard Ads Parameters
+### Non Dynamic Ads Parameters
 
 <ParamField body="campaignType" type="string" required>
 	For Sales Goal, campaignType is `OUTCOME_SALES`
 </ParamField>
 
-<ParamField body="carousel" type="object[]">
-	<Expandable title="Carousel Array">
-		<ParamField body="name" type="string" required>
-			Carousel Name
-		</ParamField>
-		<ParamField body="description" type="string">
-			Carousel Description
-		</ParamField>
-		<ParamField body="picture" type="string">
-			Carousel Picture URL
-		</ParamField>
-		<ParamField body="video_id" type="string">
-			Carousel Video ID
-		</ParamField>
-		<ParamField body="link" type="string">
-			Carousel Link URL
-		</ParamField>
-	</Expandable>
+<Tabs>
+	<Tab title="Image/Video Ads">
+		<ParamField body="isDynamicCreative" type="boolean" >
+    		Whether it's dynamic creative, useable with images/videos
 
-</ParamField>
+    		<Note>
+    			Use `isDynamicCreative` = `false`, to create multiple standard
+    			`non-dynamic` ads in a single AdSet.
+    		</Note>
 
-<ParamField body="primaryText" type="object[]">
-	<Note>Use this with carousel ads only</Note>
-	<Expandable title="Primary Text Array">
-		<ParamField body="text" type="string" required>
-			Main ad copy text
-		</ParamField>
-	</Expandable>
-</ParamField>
-
-<ParamField body="isDynamicCreative" type="boolean" >
-	Whether it's dynamic creative, useable with images/videos
-
-    <Note>
-    	Use `isDynamicCreative` = `false`, to create multiple standard
-    	`non-dynamic` ads in a single AdSet.
-    </Note>
-
-</ParamField>
-
-<ParamField body="multipleCreatives" type="object[]">
-
-    <Expandable title="Multiple Creative Configuration">
-    	<ParamField body="url" type="string" required>
-    		Destination URL
     	</ParamField>
 
-    	<ParamField body="callToAction" type="string" required>
-    		Supported call to action types are: `LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`,
+    	<ParamField body="multipleCreatives" type="object[]">
+
+    		<Expandable title="Multiple Creative Configuration">
+    			<ParamField body="url" type="string" required>
+    				Destination URL
+    			</ParamField>
+
+    			<ParamField body="callToAction" type="string" required>
+    				Supported call to action types are: `LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`,
+    				`DOWNLOAD`, `WATCH_MORE`, `APPLY_NOW`, `SUBSCRIBE`, `GET_QUOTE`,
+    				`CONTACT_US`, `ORDER_NOW`, `REQUEST_TIME`, `GET_SHOWTIMES`, `LISTEN_NOW`,
+    				`SEE_MENU`, `BOOK_TRAVEL`
+    			</ParamField>
+
+    			<ParamField body="primaryText" type="string" required>
+    				Primary Text
+    			</ParamField>
+
+    			<ParamField body="headline1" type="string">
+    				Headline
+    			</ParamField>
+
+    			<ParamField body="image" type="string">
+    				<Note>
+    					Image URL is required if video is not provided
+    				</Note>
+    				Image URL
+    			</ParamField>
+
+    			<ParamField body="video" type="object">
+    				<Note>
+    					Video ID is required if image is not provided
+    				</Note>
+    				<Expandable title="Video Data">
+    					<ParamField body="video_id" type="string">
+    						Video ID
+    					</ParamField>
+    					<ParamField body="thumbnail_url" type="string">
+    						Thumbnail URL
+    					</ParamField>
+    				</Expandable>
+    			</ParamField>
+
+    			<ParamField body="phoneNumber" type="string">
+    				Phone Number (for Call Ads)
+    			</ParamField>
+
+    			<ParamField
+    				body="greetingText"
+    				type="string"
+    			>
+    				Greeting Text
+    			</ParamField>
+
+    			<ParamField body="conversations" type="object[]">
+    				<Expandable title="Conversations Array">
+    					<ParamField body="title" type="string" required>
+    						Conversation Title
+    					</ParamField>
+    				</Expandable>
+    			</ParamField>
+
+    		</Expandable>
+
+    	</ParamField>
+
+    </Tab>
+    <Tab title="Carousel Ads">
+    <ParamField body="carousel" type="object[]">
+    		<Expandable title="Carousel Array">
+    			<ParamField body="name" type="string" required>
+    				Carousel Name
+    			</ParamField>
+    			<ParamField body="description" type="string">
+    				Carousel Description
+    			</ParamField>
+    			<ParamField body="picture" type="string">
+    				<Note>
+    					Picture URL is required if video is not provided
+    				</Note>
+    				Carousel Picture URL
+    			</ParamField>
+    			<ParamField body="video_id" type="string">
+    				<Note>
+    					Video ID is required if picture is not provided
+    				</Note>
+    				Carousel Video ID
+    			</ParamField>
+    			<ParamField body="link" type="string">
+    				Carousel Link URL
+    			</ParamField>
+    		</Expandable>
+
+    	</ParamField>
+
+    	<ParamField body="primaryText" type="object[]">
+    		<Expandable title="Primary Text Array">
+    			<ParamField body="text" type="string" required>
+    				Main ad copy text
+    			</ParamField>
+    		</Expandable>
+    	</ParamField>
+
+    	<ParamField body="callToAction" type="string">
+    		Supported call to action types are `LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`,
     		`DOWNLOAD`, `WATCH_MORE`, `APPLY_NOW`, `SUBSCRIBE`, `GET_QUOTE`,
     		`CONTACT_US`, `ORDER_NOW`, `REQUEST_TIME`, `GET_SHOWTIMES`, `LISTEN_NOW`,
     		`SEE_MENU`, `BOOK_TRAVEL`
     	</ParamField>
 
-    	<ParamField body="primaryText" type="string" required>
-    		Primary Text
-    	</ParamField>
+    </Tab>
 
-    	<ParamField body="headline1" type="string">
-    		Headline
-    	</ParamField>
-
-    	<ParamField body="image" type="string">
-    		Image URL
-    	</ParamField>
-
-    	<ParamField body="video" type="object">
-    		<Expandable title="Video Data">
-    			<ParamField body="video_id" type="string">
-    				Video ID
-    			</ParamField>
-    			<ParamField body="thumbnail_url" type="string">
-    				Thumbnail URL
-    			</ParamField>
-    		</Expandable>
-    	</ParamField>
-
-    	<ParamField body="phoneNumber" type="string">
-    		Phone Number (for Call Ads)
-    	</ParamField>
-
-    	<ParamField
-    		body="greetingText"
-    		type="string"
-    	>
-    		Greeting Text
-    	</ParamField>
-
-    	<ParamField body="conversations" type="object[]">
-    		<Expandable title="Conversations Array">
-    			<ParamField body="title" type="string" required>
-    				Conversation Title
-    			</ParamField>
-    		</Expandable>
-    	</ParamField>
-
-    </Expandable>
-
-</ParamField>
+</Tabs>
 
 <ParamField body="pixelId" type="string" required>
 	Facebook Pixel ID for conversion tracking
@@ -128,13 +154,6 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 	Campaign conversion goal type, get the list of conversion goals from
 	[here](/api-reference/endpoint/meta/get_custom_conversions), use
 	`OUTCOME_SALES` in campaignType to get the list of conversion goals.
-</ParamField>
-
-<ParamField body="callToAction" type="string">
-	<Note>Use this with carousel ads only</Note>
-	Supported call to action types are `LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`, `DOWNLOAD`,
-	`WATCH_MORE`, `APPLY_NOW`, `SUBSCRIBE`, `GET_QUOTE`, `CONTACT_US`, `ORDER_NOW`,
-	`REQUEST_TIME`, `GET_SHOWTIMES`, `LISTEN_NOW`, `SEE_MENU`, `BOOK_TRAVEL`
 </ParamField>
 
 ## Response
