Refactor campaign documentation by simplifying group titles for goals and enhancing note formatting for clarity in the awareness dynamic endpoint.

--- a/api-reference/endpoint/meta/campaign/awareness_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/awareness_dynamic.mdx
@@ -76,15 +76,14 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 	<Note>
 		Campaign Type is `OUTCOME_AWARENESS`, supported values `REACH`,
 		`THRUPLAY`
-	</Note>
-	<Note>
-		Use Optimization Goal `REACH`, When you want to increase reach of your
-		campaign and show your ads to as many people as possible.
-	</Note>
-	<Note>
-		Use Optimization Goal `THRUPLAY`, When you want to show your ads to
-		people who will watch the entire video.
-	</Note>
+
+    	- Use Optimization Goal `REACH`, When you want to increase reach of your
+    	campaign and show your ads to as many people as possible.
+
+    	- Use Optimization Goal `THRUPLAY`, When you want to show your ads to
+    	people who will watch the entire video.
+    </Note>
+
 </ParamField>
 
 <ParamField body="callToAction" type="string" required>
