--- a/api-reference/endpoint/meta/campaign/phone_call.mdx
+++ b/api-reference/endpoint/meta/campaign/phone_call.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Phone Call Goal"
+title: "Phone Call"
 api: "POST /meta/create_campaign"
 description: "This page is used to create a phone call goal campaign. Phone call ads are designed to encourage users to tap and call yourbusiness directly from the ad, making it easy to generate phone inquiries or leads."
 ---
