Improve formatting of special ad category notes in campaign documentation for enhanced readability and clarity.

--- a/snippets/create_campaign_params.mdx
+++ b/snippets/create_campaign_params.mdx
@@ -30,9 +30,10 @@
 	`EMPLOYMENT`
 	<Note>
 		- `HOUSING`: Ads related to property sales, rentals, or home-related
-		services. - `FINANCIAL_PRODUCTS_SERVICES`: Ads promoting credit cards,
-		loans, insurance, or other financial services. - `EMPLOYMENT`: Ads
-		offering job opportunities or recruitment-related services.
+		services. <br />
+		- `FINANCIAL_PRODUCTS_SERVICES`: Ads promoting credit cards, loans, insurance,
+		or other financial services. <br />- `EMPLOYMENT`: Ads offering job
+		opportunities or recruitment-related services.
 	</Note>
 </ParamField>
 
