--- a/api-reference/endpoint/meta/campaign/awareness_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/awareness_dynamic.mdx
@@ -73,10 +73,8 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="optimizationGoal" type="string" required>
+	Supported values `REACH`, `THRUPLAY`
 	<Note>
-		Campaign Type is `OUTCOME_AWARENESS`, supported values `REACH`,
-		`THRUPLAY`
-
     	- Use Optimization Goal `REACH`, When you want to increase reach of your
     	campaign and show your ads to as many people as possible.
 
