--- a/api-reference/endpoint/meta/campaign/sales_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/sales_standard.mdx
@@ -75,7 +75,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     				</Expandable>
     			</ParamField>
 
-    			<ParamField body="phoneNumber" type="string">
+    			{/* <ParamField body="phoneNumber" type="string">
     				Phone Number (for Call Ads)
     			</ParamField>
 
@@ -92,7 +92,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     						Conversation Title
     					</ParamField>
     				</Expandable>
-    			</ParamField>
+    			</ParamField> */}
 
     		</Expandable>
 
