--- a/api-reference/endpoint/meta/campaign/awareness_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/awareness_standard.mdx
@@ -70,7 +70,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     				</Expandable>
     			</ParamField>
 
-    			<ParamField body="phoneNumber" type="string">
+    			{/* <ParamField body="phoneNumber" type="string">
     				Phone Number (for Call Ads)
     			</ParamField>
 
@@ -87,7 +87,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     						Conversation Title
     					</ParamField>
     				</Expandable>
-    			</ParamField>
+    			</ParamField> */}
     		</Expandable>
     	</ParamField>
     </Tab>
@@ -139,10 +139,8 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </Tabs>
 
 <ParamField body="optimizationGoal" type="string" required>
+	Supported values `REACH`, `THRUPLAY`
 	<Note>
-		Campaign Type is `OUTCOME_AWARENESS`, supported values `REACH`,
-		`THRUPLAY`
-
     	- Use Optimization Goal `REACH`, When you want to increase reach of your
     	campaign and show your ads to as many people as possible.
 
