--- a/api-reference/endpoint/meta/campaign/conversion_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/conversion_standard.mdx
@@ -74,7 +74,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     				</Expandable>
     			</ParamField>
 
-    			<ParamField body="phoneNumber" type="string">
+    			{/* <ParamField body="phoneNumber" type="string">
     				Phone Number (for Call Ads)
     			</ParamField>
 
@@ -91,7 +91,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     						Conversation Title
     					</ParamField>
     				</Expandable>
-    			</ParamField>
+    			</ParamField> */}
     		</Expandable>
     	</ParamField>
     </Tab>
