--- a/api-reference/endpoint/meta/campaign/leads_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/leads_standard.mdx
@@ -78,7 +78,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     				</Expandable>
     			</ParamField>
 
-    			<ParamField body="phoneNumber" type="string">
+    			{/* <ParamField body="phoneNumber" type="string">
     				Phone Number (for Call Ads)
     			</ParamField>
 
@@ -95,7 +95,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     						Conversation Title
     					</ParamField>
     				</Expandable>
-    			</ParamField>
+    			</ParamField> */}
     		</Expandable>
     	</ParamField>
 
