--- a/api-reference/endpoint/meta/create_traffic_campaign.mdx
+++ b/api-reference/endpoint/meta/create_traffic_campaign.mdx
@@ -179,7 +179,7 @@ playground: "none"
     		</Expandable>
     	</ParamField>
 
-    	<ParamField body="phoneNumber" type="string">
+    	{/* <ParamField body="phoneNumber" type="string">
     		Phone Number (for Call Ads)
     	</ParamField>
 
@@ -196,7 +196,7 @@ playground: "none"
     				Conversation Title
     			</ParamField>
     		</Expandable>
-    	</ParamField>
+    	</ParamField> */}
 
     </Expandable>
 
