--- a/snippets/create_campaign_params.mdx
+++ b/snippets/create_campaign_params.mdx
@@ -32,9 +32,8 @@
 		- `HOUSING`: Ads related to property sales, rentals, or home-related
 		services. <br />
 		- `FINANCIAL_PRODUCTS_SERVICES`: Ads promoting credit cards, loans, insurance,
-		or other financial services.
-		<br /> - `EMPLOYMENT`: Ads offering job opportunities or
-		recruitment-related services.
+		or other financial services. <br /> - `EMPLOYMENT`: Ads offering job opportunities
+		or recruitment-related services.
 	</Note>
 </ParamField>
 
