Add playground attribute to campaign documentation for consistency

--- a/api-reference/endpoint/meta/campaign/boost_post.mdx
+++ b/api-reference/endpoint/meta/campaign/boost_post.mdx
@@ -2,6 +2,7 @@
 title: "Boost Post"
 api: "POST /meta/create_campaign"
 description: "This page is used to create a boost post campaign. Boost post ads are used to promote an existing post on your Facebook or Instagram page to reach a larger audience and increase engagement like likes, comments, shares, or views."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
