--- a/api-reference/endpoint/meta/campaign/conversion_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/conversion_standard.mdx
@@ -2,6 +2,7 @@
 title: "Non Dynamic Ad"
 api: "POST /meta/create_campaign"
 description: "This endpoint is used to create a campaign for conversion non dynamic ads. Conversion ads are designed to drive users to take specific actions, such as completing a purchase, downloading an app, or signing up for a service."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
