--- a/api-reference/endpoint/meta/campaign/engagement.mdx
+++ b/api-reference/endpoint/meta/campaign/engagement.mdx
@@ -2,6 +2,7 @@
 title: "Engagement"
 api: "POST /meta/create_campaign"
 description: "This page is used to create a engagement goal campaign. Engagement ads are designed to get more interactions on your content, such as likes, comments, shares, event responses, or post saves on Meta platforms."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
