--- a/api-reference/endpoint/meta/campaign/leads_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/leads_dynamic.mdx
@@ -1,7 +1,8 @@
 ---
-title: " Dynamic Ad"
+title: "Leads Dynamic Ad"
 api: "POST /meta/create_campaign"
 description: "This endpoint is used to create a campaign for leads dynamic ads. Lead generation ads are ad campaigns designed to collect contact information (like name, email, phone number) directly from users on Meta platforms without needing them to leave the app."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
