--- a/api-reference/endpoint/meta/campaign/phone_call.mdx
+++ b/api-reference/endpoint/meta/campaign/phone_call.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Phone Call"
 api: "POST /meta/create_campaign"
-description: "This page is used to create a phone call goal campaign. Phone call ads are designed to encourage users to tap and call yourbusiness directly from the ad, making it easy to generate phone inquiries or leads."
+description: "This page is used to create a phone call goal campaign. Phone call ads are designed to encourage users to tap and call your business directly from the ad, making it easy to generate phone inquiries or leads."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
