--- a/api-reference/endpoint/meta/campaign/sales_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/sales_standard.mdx
@@ -2,6 +2,7 @@
 title: "Non Dynamic Ad"
 api: "POST /meta/create_campaign"
 description: "This endpoint is used to create a campaign for sales non dynamic ads. Sales ads are designed to drive purchases or conversions, showing your ads to people most likely to buy your product or service."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
