--- a/api-reference/endpoint/meta/campaign/awareness_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/awareness_dynamic.mdx
@@ -2,6 +2,7 @@
 title: "Dynamic Ad"
 api: "POST /meta/create_campaign"
 description: "This endpoint is used to create a campaign for awareness dynamic ads. Awareness ads are designed to increase recognition of your brand, product, or service by showing your ads to people most likely to remember them."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
