--- a/api-reference/endpoint/meta/campaign/leads_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/leads_standard.mdx
@@ -2,6 +2,7 @@
 title: "Non Dynamic Ad"
 api: "POST /meta/create_campaign"
 description: "This endpoint is used to create a campaign for leads non dynamic ads. Lead generation ads are ad campaigns designed to collect contact information (like name, email, phone number) directly from users on Meta platforms without needing them to leave the app."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
