--- a/api-reference/endpoint/meta/campaign/traffic_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/traffic_standard.mdx
@@ -2,6 +2,7 @@
 title: "Non Dynamic Ad"
 api: "POST /meta/create_campaign"
 description: "This endpoint is used to create a campaign for traffic non dynamic ads. Traffic ads are designed to drive users to a specific destination like a website."
+playground: "none"
 ---
 
 import CampaignParams from "/snippets/create_campaign_params.mdx";
