Refactor campaign documentation by updating ad titles for clarity, restructuring campaign groups, and enhancing parameter descriptions for Message Ads, Phone Call Ads, and Dynamic Ads.

--- a/api-reference/endpoint/meta/campaign/leads_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/leads_dynamic.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Leads Dynamic Ad"
+title: "Dynamic Ad"
 api: "POST /meta/create_campaign"
 description: "This endpoint is used to create a campaign for leads dynamic ads. Lead generation ads are ad campaigns designed to collect contact information (like name, email, phone number) directly from users on Meta platforms without needing them to leave the app."
 playground: "none"
