--- a/api-reference/endpoint/meta/campaign_overview.mdx
+++ b/api-reference/endpoint/meta/campaign_overview.mdx
@@ -74,10 +74,10 @@ Goal has different parameters
 </Card>
 
 <Card
-	title="💬 Engagement Ad"
+	title="💬 Message Ad"
 	href="/api-reference/endpoint/meta/campaign/engagement"
 >
-	Engagement campaigns are designed to get more interactions on your content,
+	Message ad campaigns are designed to get more interactions on your content,
 	such as likes, comments, shares, event responses, or post saves on Meta
 	platforms.
 </Card>
