--- a/snippets/create_campaign_params.mdx
+++ b/snippets/create_campaign_params.mdx
@@ -22,7 +22,7 @@
 </ParamField>
 
 <ParamField body="url" type="string" required>
-	Destination URL where user will be redirected to after clicking the ad.
+	Your Website URL
 </ParamField>
 
 <ParamField body="specialAdCategories" type="string[]">
