--- a/snippets/create_campaign_targeting.mdx
+++ b/snippets/create_campaign_targeting.mdx
@@ -1,6 +1,6 @@
 ### Targeting Parameters
 
-<ParamField body="audienceName" type="string">
+<ParamField body="audienceName" type="string" required>
 	Name of the target audience
 </ParamField>
 
