--- a/api-reference/endpoint/meta/campaign/engagement.mdx
+++ b/api-reference/endpoint/meta/campaign/engagement.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Engagement"
+title: "Engagement Ad"
 api: "POST /meta/create_campaign"
 description: "This page is used to create a engagement goal campaign. Engagement ads are designed to get more interactions on your content, such as likes, comments, shares, event responses, or post saves on Meta platforms."
 playground: "none"
@@ -15,7 +15,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 <CampaignTargeting />
 
-### Dynamic Ads Parameters
+### Non Dynamic Ads Parameters
 
 <ParamField body="campaignType" type="string" required>
 	For Engagement Goal, campaignType is `OUTCOME_ENGAGEMENT`
@@ -89,6 +89,14 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 </ParamField>
 
+<ParamField body="messagingApps" type="string[]" required>
+	Messaging apps = `MESSENGER`, `INSTAGRAM`, `WHATSAPP`
+</ParamField>
+
+<ParamField body="phoneNumber" type="string">
+	Phone Number
+</ParamField>
+
 <ParamField body="greetingText" type="string" required>
 	Greeting Text
 </ParamField>
@@ -99,14 +107,6 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 			Conversation Title
 		</ParamField>
 	</Expandable>
-</ParamField>
-
-<ParamField body="messagingApps" type="string[]" required>
-	Messaging apps = `MESSENGER`, `INSTAGRAM`, `WHATSAPP`
-</ParamField>
-
-<ParamField body="phoneNumber" type="string">
-	Phone Number
 </ParamField>
 
 <ParamField body="isDynamicCreative" type="boolean" >
