--- a/api-reference/endpoint/meta/campaign/phone_call.mdx
+++ b/api-reference/endpoint/meta/campaign/phone_call.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Phone Call"
+title: "Call Ads"
 api: "POST /meta/create_campaign"
 description: "This page is used to create a phone call goal campaign. Phone call ads are designed to encourage users to tap and call your business directly from the ad, making it easy to generate phone inquiries or leads."
 playground: "none"
@@ -15,7 +15,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 <CampaignTargeting />
 
-### Dynamic Ads Parameters
+### Non Dynamic Ads Parameters
 
 <ParamField body="campaignType" type="string" required>
 	For Phone Call Goal, campaignType is `LEAD_GENERATION`
